@@ -1,4 +1,4 @@
 DIST noobjuice-viewer-0.3.tgz 150858 RMD160 e398feaef2be61faab48cad8a01908b11bb8c061 SHA1 8a82fde03259a138d1049666e8099722a9661340 SHA256 8eaa33700b7cd44abdfb27517ddb156df4a7ac21391dda6b2ea313b362694f6f
-EBUILD noobjuice-viewer-0.3.ebuild 667 RMD160 7be47a722f57e7748e6602303886a0d4843f43d0 SHA1 ee881b565c8a30559da4b56ab16ad81a17e0421c SHA256 5d1cea3792288551c031c140fd3d1e0ca7f692e88d34ee8cffa65e12582a227b
-MISC ChangeLog 1022 RMD160 1a1c919f5dff096cda8220eea76bed08610275e6 SHA1 6d0bbeb589cac307cbc2fa20ca4b2ae321e7d005 SHA256 577e0ecf4e5236c22ea95300da15812e1c9b27625d9c70e4eb2db89ac69cb960
+EBUILD noobjuice-viewer-0.3.ebuild 626 RMD160 596b5b77ba458e3dad34ecaaa5b4f38a87bb8d8d SHA1 b97db3535a4f3ecbcddeab05afe19ed9584a484a SHA256 b715b22f681a24cd5b301fe788388d261ba28a6a586ddaec89fdae857d834fd9
+MISC ChangeLog 1134 RMD160 7f1df526cd22df48012e1c80bd902c7011ca1f9c SHA1 3c1cff197faa89ba18c706fcdfb782ae07c9aa1a SHA256 12deb4f52ca2c5638421da445821cce33b50515ad8523275aee288cca0bf613b
 MISC metadata.xml 315 RMD160 baa6d96f67ef94c682334afd63a2235e65d542c3 SHA1 872384da26b813a823c4c76561f53b7d8719c6b5 SHA256 4f44ef7a08c9255f8fe6f4e3881716cc4f52b0c8cd4550b89277b22056984faa
